@@ -19,6 +19,7 @@ version 0.84.05
 	GTK code cleanup
 	Requires at least gtk+ 2.18
 	GTK status info/status hex bugfix
+	Using command 0x02 0x00 for buffer mask (K-70, K-3II)
 
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
